# talk-to-llama

./: README.md  chat.py  opencode.json  pyproject.toml
